<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:text="Star Wars Lexicon"
            android:textStyle="bold"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_people_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/people"
            android:textSize="40sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_films_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/films"
            android:textSize="40sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_people_root"/>

        <TextView
            android:id="@+id/tv_starships_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/starships"
            android:textSize="40sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_films_root"/>

        <TextView
            android:id="@+id/tv_planets_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/planets"
            android:textSize="40sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_starships_root"/>

        <TextView
            android:id="@+id/tv_vehicles_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/vehicles"
            android:textSize="40sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_planets_root"/>

        <TextView
            android:id="@+id/tv_species_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/species"
            android:textSize="40sp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_vehicles_root"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>